--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "apple.example.com.foodorderappexample"
-        minSdkVersion 17
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -34,10 +34,16 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 
-    implementation 'com.android.support:cardview-v7:26.+'
-    implementation 'com.android.support:recyclerview-v7:26.+'
+    implementation 'com.android.support:cardview-v7:27.+'
+    implementation 'com.android.support:recyclerview-v7:27.+'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+
+    implementation 'com.android.support:design:27+'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
