--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.github.mancj:MaterialSearchBar:0.7.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
